# real-time_screen_AI_translator

./: .gitignore  README.md  README_EN.md  checker.py  controller.py  exclude_set.json  gui.py  live_screenshot.py  main.py  manager.py  ocr.py  pyproject.toml  study.py  study_box.py  study_manage.py  test_torch.py  translate.py  translator.py  utils.py  临时记录
.continue/rules/: ai_notes.md  project_context.md
voxcpm_tts/tts/: audio_process.py  modern_player.py  player.py  readme.md  ttsplayer.py
