[project]
name = "ai-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "openai>=2.8.1",
    "pyautogui>=0.9.54",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = {index = "pytorch-cu"}
torchvision = {index = "pytorch-cu"}
