[project]
name = "ai-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.0, <3.12"
dependencies = [
    "numba>=0.63.1",
    "python-levenshtein>=0.27.3",
    "torch>=2.9.1",
    "torchcodec>=0.9.1",
    "voxcpm==1.5.0",
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "openai>=2.8.1",
    "pyautogui>=0.9.54",
    "sounddevice>=0.5.3",
    "opencv-python>=4.13.0.90",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = {index = "pytorch-cu"}
